--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.7",
-    "web-vitals": "^2.1.4",
-    "proxy": "http://localhost:2626"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object":"7.21.11"
