--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
+    "forever": "^4.0.3",
     "dotenv": "^16.3.1",
     "git": "^0.1.5",
     "axios": "^1.6.1",
